# wifi

./: CMakeLists.txt  LICENSE  README.md
cmake/: macros.cmake
lib/: CMakeLists.txt
lib/cglm/: mat4.h
lib/freetype/: CMakeLists.txt
lib/freetype/include/freetype/: fttypes.h
lib/freetype/include/freetype/internal/: ftdebug.h
lib/freetype/src/autofit/: afglobal.c  afhints.c  afloader.c  afmodule.c
lib/freetype/src/base/: ftadvanc.c  fterrors.c
lib/libcsv/: CMakeLists.txt  csv.h  libcsv.c
lib/tinyobjloader/: tinyobj_loader.h
resources/: CMakeLists.txt
resources/models/: base.3d  base.mtl  cube.3d  link.3d
resources/shaders/: a.spv  default.frag  default.vert  frag.spv  texture.frag  texture.vert  texture_frag.spv  texture_vert.spv  vert.spv
script/: build_reports.sh
script/ap_distribution/: distrib.py
script/distance/: dist.py
script/reportGen/: moodtracker.sty  parser.py  resume_generator.py  tex.py  usr.py
script/sanitizer/: change_mac_addr_format.py  discretize.py  filter.py  fix_database.py  logfreq.py
script/sanitizer/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
script/schedule/: bin_schedule.py  compare.py  schedule.py
src/: CMakeLists.txt  main.c
src/csv/: CMakeLists.txt  CSV_common.h
src/csv/intern/: csv.c  csv.h
src/device/: CMakeLists.txt  DEVICE_common.h
src/device/intern/: access_point.c  access_point.h  device.c  device.h  fingerprint.c  fingerprint.h
src/kernel/: CMakeLists.txt  KER_fft.h  KER_list.h  KER_stack.h  KER_table.h
src/kernel/intern/: fft.c  fft.h  graph.c  graph.h  hash_table.c  list.c  stack.c  stack.h
src/memory/: CMakeLists.txt  MEM_alloc.h
src/memory/intern/: alloc_light_impl.c  alloc_light_impl.h  alloc_secured_impl.c  alloc_secured_impl.h  malloc.c
src/memory/tests/: secured_tests.c  secured_tests.h
src/renderer/: CMakeLists.txt  RND_window.h
src/renderer/intern/: buffer.c  buffer.h  camera.c  camera.h  command_buffer.c  command_buffer.h  descriptor_set.c  descriptor_set.h  device_alloc.c  device_alloc.h  init.c  init.h  model.c  model.h  model_loading.c  model_loading.h  object.c  object.h  renderer.c  renderer.h  texture.c  texture.h  ui.c  ui.h  vertex.c  vertex.h  wavefront.c  wavefront.h
src/user/: CMakeLists.txt  USR_common.h
src/user/intern/: export.c  export.h  schedule.c  schedule.h  user.c  user.h
src/visualization/: CMakeLists.txt  VSL_common.h
src/visualization/intern/: animation.c  animation.h  main_loop.c  main_loop.h
wifi.xcodeproj/: project.pbxproj
wifi.xcodeproj/xcshareddata/xcschemes/: wifi.xcscheme
wifi.xcodeproj/xcuserdata/emmanuel.xcuserdatad/xcschemes/: xcschememanagement.plist
